log
Fri 12 Aug 2022 12:50:32 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:62:17: error: expected ‘;’, ‘,’ or ‘)’ before ‘.’ token
   62 |   strcpy(Persona.nombre,"")
      |                 ^
exercises.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
dc5114c
Fri 12 Aug 2022 12:50:44 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
b75599d
Fri 12 Aug 2022 12:55:55 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:64:34: error: expected expression before ‘]’ token
   64 |   strcpy("persona.nombre",nombre[]);
      |                                  ^
exercises.c:65:28: error: expected expression before ‘]’ token
   65 |   strcpy("persona.rut",rut[]);
      |                            ^
exercises.c:66:14: error: assignment to expression with array type
   66 |   persona.rut=edad;
      |              ^
Compilation failed
6331d24
Fri 12 Aug 2022 12:57:56 PM UTC: 
 exercises.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:61:12: error: variable ‘ptrPersona’ set but not used [-Werror=unused-but-set-variable]
   61 |   Persona* ptrPersona;
      |            ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0c96374
Fri 12 Aug 2022 12:58:07 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|6
total_score: 10/70
cd329ba
Fri 12 Aug 2022 01:07:24 PM UTC: 
 exercises.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  1|6
total_score: 10/70
0e75d20
Fri 12 Aug 2022 01:09:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:43:11: error: expected expression before ‘]’ token
   43 |   sumaN(b[],m);
      |           ^
exercises.c:42:8: error: variable ‘b’ set but not used [-Werror=unused-but-set-variable]
   42 |   int *b = (a+i);
      |        ^
cc1: all warnings being treated as errors
Compilation failed
1a5975c
